# myNewEpyPkg

./: .copier-answers.yml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: release.yml
api/: index.html
docs/: api.md
search/: search_index.json
src/myNewEpyPkg/: __init__.py  myNewEpyPkg.py
tests/: test_myNewEpyPkg.py
