[project]
name = "myNewEpyPkg"
version = "0.0.0"
description = "Add your description here"
authors = [
  { name = "Your Name", email = "email@gmail.com" },
]
readme = "README.md"
requires-python = ">= 3.9"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-deadfixtures>=2.2.1",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.4",
  "mkdocstrings-python>=1.15.0",
]

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]

